2013-03-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Reverting parts of the previous patch because under certain
	conditions (network_scan_status == busy) the kb_saving
	is still needed.

	* src/save_kb.c: Removed unneeded include.
	(save_kb): Re-added a simplified version.

	* src/save_kb.h: Re-added proto accordingly.

	* src/piic.c (kb_parse): Re-added handling for case "save_kb".

	* src/attack.c (attack_network, launch_plugin, init_host_kb):
	Re-adding, partly simplified, handling for case "save_kb", in
	other words for network scan situations.

2013-03-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Third part of removing kb-saving feature. This completes
	the removal of the user-driven kb saving.

	* src/preferences.c (openvassd_defaults): Removed "kb_max_age".

	* src/save_kb.c (save_kb_max_age): Removed.
	(save_kb_load_kb): Apply the default 864000 for max_age
	directly (the old default, 10 days).

	* src/save_kb.h: Removed proto accordingly.

2013-03-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Second part of removing kb-saving feature.
	This removes the scanner configs for advising to save kb.
	Thus no kb files are stored anymore under users/$user/kbs/
	during a non-network scan. Network scans will still save
	KBs.

	* src/preferences.c (openvassd_defaults): Removed
	"save_knowledge_base", "kb_restore",
	"only_test_hosts_whose_kb_we_dont_have" and
	"only_test_hosts_whose_kb_we_have".

	* src/save_kb.c (save_kb, save_kb_pref_untested_hosts_only,
	save_kb_pref_tested_hosts_only, save_kb_pref_restore): Removed.

	* src/save_kb.h: Removed protos accordingly.

	* src/attack.c (attack_network, launch_plugin, init_host_kb):
	Removed handling for case "save_kb".

	* src/piic.c (kb_parse): Removed handling for case "save_kb".

2013-03-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (plugin_is_newstyle): Remove function. Now part of
	plugutils.c in libraries.
